--- a/GVC API/package.json
+++ b/GVC API/package.json
@@ -37,9 +37,12 @@
         "firebase": "^9.6.1",
         "firebase-admin": "^9.12.0",
         "firebase-functions": "^3.21.1",
+        "nestjs-firebase": "^8.2.3",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.4.0",
+        "save": "^2.5.0",
+        "timestamp-to-date": "^1.1.0",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
