--- a/GVC API/firebase.json
+++ b/GVC API/firebase.json
@@ -1,6 +1,12 @@
 {
-  "functions": {
-    "source": ".",
-    "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build"
-  }
+    "functions": {
+        "source": ".",
+        "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build"
+    },
+    "emulators": {
+
+        "hosting": {
+            "port": 5004
+        }
+    }
 }
