--- a/firebase.json
+++ b/firebase.json
@@ -5,5 +5,12 @@
             "npm --prefix \"$RESOURCE_DIR\" run build"
         ],
         "source": "facial-recognition-system"
+    },
+    "emulators": {
+
+        "hosting": {
+            "port": 5004
+        }
     }
+
 }
